# Shape_Retrieval

./: .gitignore  .gitmodules  CMakeLists.txt  Histogram.cpp  Histogram.hpp  LICENSE  README.md  Vocabulary.hpp
OccludingContours/: CMakeLists.txt  camera_position.xy  createCameraFile.cpp  generateDataset.py  occludingContours.py  sphere.off
clustering/: clustering.py
cmake/src/: Histogram.hpp
data/: centroids.xy  frequencies.xy
src/: BagOfFeatures.cpp  BagOfFeatures.h  BagOfFeatures.hpp  FeatureGenerator.cpp  FeatureGenerator.hpp  Histogram.cpp  Histogram.hpp  InverseIndex.cpp  InverseIndex.hpp  View.cpp  View.hpp  Vocabulary.cpp  Vocabulary.hpp  VocabularyGenerator.cpp  VocabularyGenerator.hpp  main.cpp  test_draw.py  view.cpp  view.h  view.hpp
